# lock-owl

./: README.md  package-lock.json  package.json
src/: App.tsx  CustomRouter.tsx  UserCreation.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/lowl_encrypt/: mod.rs
src-tauri/src/lowl_encrypt/aes_encryption/: mod.rs
src-tauri/src/lowl_encrypt/utility/: mod.rs
src/components/: CreateUser.tsx  FileSelector.tsx  History.tsx  HistoryElement.tsx  InputPassword.tsx  PasswordModal.tsx  TextInput.tsx
src/logic/: crypto.ts
src/style/: app.scss  color.scss  components.scss  history.scss  root.scss  userCreation.scss
