[package]
name = "lock-owl"
version = "0.0.0"
description = "A simple encryption program"
authors = ["Eric Menne"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "*"
rsa = "0.9.2"
rand = "0.8.4"
aes-gcm-siv = "0.11.1"
rust-argon2 = "1.0"
anyhow = "1.0.72"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]



[profile.dev.package.num-bigint-dig]
opt-level = 3
